--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>I'm Basit</h1>
         <h2>a <span class="web">web</span> developer.</h2>
         <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-        <img class="mountain-cloud" src="images/mountain.png" alt="mountain-img">
+        <img class="mountain-cloud" src="/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
         <div class="profile">
