--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="images/profile-pic.png" alt="profile-pic">
+          <img src="profile-pic.png" alt="profile-pic">
           <h2 class="hello">Hello.</h2>
           <p class="intro">I am Full stack web developer. I am founder and CEO of Social Services LLC. I love doing programming.</p>
         </div>
