--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Basit Ali</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,15 +10,15 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1>I'm Basit</h1>
         <h2>a <span class="web">web</span> developer.</h2>
-        <img class="bottom-cloud" src="/cloud.png" alt="cloud-img">
-        <img class="mountain-cloud" src="/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+        <img class="mountain-cloud" src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="/profile-pic.png" alt="profile-pic">
+          <img src="profile-pic.png" alt="profile-pic">
           <h2 class="hello">Hello.</h2>
           <p class="intro">I am Full stack web developer. I am founder and CEO of Social Services LLC. I love doing programming.</p>
         </div>
